p5/style.css
/* ... */
.projectsA {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  color: black;
  justify-content: center;
  justify-items: center;
  padding: 4rem 0;
}

/* -----------BUTTON STYLING------------ */

div.button {
  display: flex;
  flex-direction: row-reverse;
  height:fit-content;
  background-color: transparent;
}

#dark-button {
  box-shadow: none;
  border: none;
}

.button-6 {
  align-items: center;
  background-color: transparent;
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(47, 47, 47);
  cursor: pointer;
  display: inline-flex;
  font-family: 'Montserrat', sans-serif;
  font-size: 24px;
  font-weight: 600;
  justify-content: center;
  line-height: 1.25;
  margin: 0;
  min-height: 3rem;
  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
  position: relative;
  text-decoration: none;
  transition: all 250ms;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: baseline;
  width: 6rem;
}

.dark-mode-button-6 {
  color: white;
}

.button-6:hover {
  border: 2px; 
  border-color: rgba(0, 0, 0, 0.15);
  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
  background-color: #75634696;
  color: white;
  transform: translateY(-4px);

}


/* .button-6:active {
  background-color: #F0F0F1;
  border-color: rgba(0, 0, 0, 0.15);
  box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
  color: rgba(0, 0, 0, 0.65);
  transform: translateY(0);
} */


button {
  height: 3rem;
  font-size: 20pt;
  background-color: #425595;
  color: #ccc;
}

p.code {
  width: 700px;
  background-color: cornsilk;
  font-size: 16px;
  flex-wrap: wrap;
  color: black;
}

textarea {
  min-width: 700px;
  min-height: 600px;
}

.row {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  width: 80%;
  resize: both;
}

.footer {
  position: relative;
  display: flex;
  justify-content: center;
}

.footer-spell, .footer-spell-active {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 75px;
  height: 75px;
  cursor: pointer;
}

.footer-spell-active {
  opacity: 0;
  transition: 0.4s ease-in-out;
}

.footer-spell-active:hover {
  opacity: 1;
}

div.contact-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

div.contact {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-bottom: 2rem;
}

div.slide {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: black;
  height: 175px;
  width: 100%;
  padding-bottom: 2rem;
}

.hide {
  display: none;
}

.dark-mode-hide {
  color: #ccc;
}

img.slide:hover + .hide {
  display: flex;
}

img.slide-dark:hover + .hide {
  display: flex;
}

img.slide, img.slide-dark {
  height: 100px;
  width: 175px;
}

img.slide {
  filter: grayscale(60%);
  filter: brightness(75%);
  transition: 0.2s ease-in-out;
}

img.slide-dark {
  filter: opacity(0.5);
  transition: 0.2s ease-in-out;
}

img.slide:hover, img.slide-dark:hover {
  filter: none
}

.skills-companies {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  padding: 0 4rem;
}

.skills {
  width: auto;
}

#msft {
  padding-bottom: 2rem;
  filter: brightness(0.8);
}

#companies {
  margin: 0;
}

.companies {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.companies-imgages {
  display: flex;
  align-items: center;
}

img.companies {
  display: flex;
  height: 150px;
  width: 300px;
  justify-content: center;
  padding-bottom: 4rem;
}

img.contact {
  height: 50px;
  width: 100px;
  transition: 0.2s ease-in-out;
}

img.contact:hover {
  transform: translateY(-5px);
}

/* media queries */

.menu {
  display: none;
}

.menu-items {
  display: flex;
  flex-direction: row-reverse;
}

@media screen and (max-width: 1130px) {
  .row {
    grid-template-columns: repeat(3, 1fr);

  }
}

@media screen and (max-width: 560px) {
  .projectsA {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (max-width: 768px) { 
  .navbar2 {
    width:auto;
    background-color: transparent;
  }

  .navbar2-show {
    width: auto;
    flex-direction: column-reverse;
    align-items: flex-end;
  }  

  .navbar-li {
    display: none;
  }

  .navbar-li-show {
    display: flex;
    flex-direction: column;
  }

  .menu {
    display: flex;
    height: 35px;
    transition: 0.5s ease-in-out;
  }

  .menu-show {
    rotate: -90deg;
  }

  .menu-items-show {
    flex-direction: column-reverse;
  }

  #burgir-button {
    background-color: transparent;
    border: none;
    height: auto;
    filter: brightness(0.9);
  }

  #burgir-button:hover {
    filter: brightness(0.7);
  }

  .row {
    width: 100%;
  }

  div.slide {
    padding-bottom: 0rem;
  }

  img.slide, img.slide-dark {
    height: 75px;
    width: 130px;
  }

  .skills-companies {
    flex-direction: column;
  }

  .about-desc {
    flex-direction: column-reverse;
    font-size: 16pt;
  }

  .greeting {
    font-size: 2.8rem;
  }

  img.about-me {
    margin: 0;
  }

  #words {
    font-size: 28pt;
  }

  .landing {
    padding-left: 1rem;
  }
  
  .vert {
    width: 90%;
    margin: 10px;
  }

  img.companies {
    width: 200px;
    height: 100px;
  }
}

